@@ -5,19 +5,20 @@
        provider-name="pakee">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
+    <import addon="script.module.urlresolver" version="0.0.1"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
         <provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
-    <summary lang='en'>Platform to browse Pakistani media across devices</summary>
+    <summary lang='en'>Platform to browse media from the subcontinent across devices</summary>
     <description lang='en'>
--Browse TV channels, TV shows, movies, actors, fashion, photography, sports, YouTube channels from Pakistan 
+-Browse TV channels, TV shows, movies, actors, fashion, photography, sports, YouTube channels from Subcontinent 
 -Browse musicians' albums, songs, Facebook albums, news and YouTube channels 
 -Allows users to play video, music or image content in "play all" mode 
 -Allows users to pull any YouTube users playlists, uploaded/favorite videos and play in "play all" mode
--More info available at http://code.google.com/p/pakee
+-More info available at http://sastatv.com
 </description>
   <disclaimer lang='en'>No media content is hosted or streamed by the makers of this addon. Some parts of this addon may not be legal in your country of residence - please check with your local laws before installing.</disclaimer>
     <platform>all</platform>
